SB Admin more tidying, looking pretty good.  Stopped the RHS dropdown icons wrapping into a new row, but haven't worked out how to then right-justify them yet.

--- a/client/app/styling/sbAdminLess/sb-admin-2.less
+++ b/client/app/styling/sbAdminLess/sb-admin-2.less
@@ -23,7 +23,7 @@ body {
   #page-wrapper {
     position: inherit;
     margin: 0 0 0 250px;
-    padding: 0 30px;
+    padding: 50px 30px;
     border-left: 1px solid darken(@gray-lightest, 6.5%);
   }
 }
@@ -142,7 +142,7 @@ body {
     z-index: 1;
     position: absolute;
     width: 250px;
-    margin-top: 51px;
+    margin-top: 71px;
   }
 
   .navbar-top-links .dropdown-messages,
